SignIn, SignUp, Contact updated
Created a contact form on the contact page. Small changes on the signIn page. Some changes on the signUp page where error messages is added. Also installed hookform/resolvers and yup to the project.

--- a/src/styles.css
+++ b/src/styles.css
@@ -98,7 +98,8 @@ form {
 }
 
 .login-container,
-.register-container {
+.register-container,
+.contact-container {
   margin: 20px;
 }
 
@@ -141,4 +142,8 @@ form {
 p {
   margin-top: 20px;
   text-align: center;
+}
+
+.errorStyle {
+  color: red;
 }
