--- a/src/styles.css
+++ b/src/styles.css
@@ -207,3 +207,68 @@ p {
 .viewDetailsLink:hover {
   background-color: #5687c7;
 }
+
+.navStyle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  padding: 10px;
+}
+
+.hamburger {
+  display: none;
+  font-size: 20px;
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.ulStyle {
+  display: flex;
+  justify-content: flex-end;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.ulStyle li {
+  margin-left: 20px;
+}
+
+@media screen and (max-width: 820px) {
+  .ulStyle {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-color: #333;
+    padding: 10px;
+    text-align: center;
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(100%);
+  }
+
+  .ulStyle li {
+    margin: 10px 0;
+  }
+
+  .hamburger {
+    display: block;
+    z-index: 1;
+  }
+
+  .ulStyle.show {
+    display: block;
+    transform: translateX(0%);
+    top: 15%;
+  }
+
+  .ulStyle.show li {
+    display: block;
+    margin: 40px 0;
+  }
+}
