--- a/src/styles.css
+++ b/src/styles.css
@@ -237,6 +237,96 @@ p {
   margin-left: 20px;
 }
 
+.datePickerContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.datePickerContainer label {
+  margin-right: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #555;
+}
+
+.react-datepicker-wrapper {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+}
+
+.react-datepicker {
+  font-family: inherit;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  z-index: 1;
+}
+
+.react-datepicker__header {
+  background-color: #f0f0f0;
+  border-radius: 8px 8px 0 0;
+  padding: 12px;
+  text-align: center;
+}
+
+.react-datepicker__header--time {
+  padding: 8px 0;
+}
+
+.react-datepicker__day-name,
+.react-datepicker__day {
+  width: 2rem;
+  height: 2rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.react-datepicker__day {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #555;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.react-datepicker__day:hover {
+  background-color: #f0f0f0;
+}
+
+.react-datepicker__day--selected {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.react-datepicker__day--disabled {
+  color: #ccc;
+  cursor: default;
+}
+
+.react-datepicker__input-container input {
+  width: 90%;
+  height: 30px;
+  margin: 0 auto;
+  padding: 8px 12px;
+  font-family: inherit;
+  font-size: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: none;
+  outline: none;
+  transition: all 0.3s ease;
+}
+
+.react-datepicker__input-container input:focus {
+  border-color: rgb(11, 171, 157);
+}
+
 @media screen and (max-width: 820px) {
   .ulStyle {
     display: none;
