--- a/src/styles.css
+++ b/src/styles.css
@@ -329,11 +329,19 @@ p {
 
 .profileContentStyle {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .profileAvatarImage {
   max-width: 300px;
+  margin-bottom: 20px;
+}
+
+.createVenueForm {
+  max-width: 600px;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 820px) {
