--- a/src/styles.css
+++ b/src/styles.css
@@ -171,25 +171,50 @@ p {
 .venue {
   margin-bottom: 30px;
   padding: 20px;
-  margin: 20px;
   border: 2px solid #ccc;
   border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
+  background-color: #fff;
+}
+
+.venue:hover {
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.venuesContainer {
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-content: center;
+  gap: 40px;
+}
+
+.venueLink {
+  text-decoration: none;
+  color: inherit;
 }
 
 .venue h2 {
-  font-size: 24px;
+  font-size: 28px;
   margin-top: 0;
-}
-
-.venueImage {
-  max-width: 100%;
-  height: auto;
   margin-bottom: 10px;
 }
 
 .venue p {
-  font-size: 18px;
+  font-size: 20px;
   margin: 0;
+  margin-bottom: 10px;
+}
+
+.venueImage {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .viewDetailsLink {
@@ -199,7 +224,7 @@ p {
   padding: 10px 20px;
   border-radius: 5px;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 20px;
   margin-top: 10px;
   transition: background-color 0.3s ease-in-out;
 }
