--- a/src/styles.css
+++ b/src/styles.css
@@ -160,6 +160,34 @@ p {
   object-fit: cover;
 }
 
+.venueDescription {
+  font-size: 15px;
+  color: #000000;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.venueInfo {
+  font-size: 14px;
+  color: #000000;
+  margin-bottom: 5px;
+}
+
+.venuePrice {
+  font-weight: bold;
+  color: #000000;
+}
+
+.venueRating {
+  font-weight: bold;
+  color: #000000;
+}
+
+.venueMaxGuests {
+  font-weight: bold;
+  color: #000000;
+}
+
 .searchContainer {
   margin-bottom: 20px;
   display: flex;
