SignUp, SignIn and Contact updated
Inputs updated in the SignIn, SignUp and Contact. Also added placeholder to the contact form

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,11 @@ footer {
   padding: 20px;
 }
 
+.labelStyle {
+  font-weight: bold;
+  color: black;
+}
+
 .credit {
   margin-top: 10px;
   text-align: center;
