Added some new css code
Added some media queries code to the upcomingBookings file, the venues on the profile page displays as block-list on mobile devices.

--- a/src/styles.css
+++ b/src/styles.css
@@ -437,6 +437,13 @@ p {
 }
 
 @media screen and (max-width: 820px) {
+  .venuesContainer {
+    display: block;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 820px) {
   .ulStyle {
     display: none;
     position: absolute;
