--- a/src/styles.css
+++ b/src/styles.css
@@ -436,6 +436,10 @@ p {
   background-color: #5687c7;
 }
 
+.react-calendar {
+  margin: 0 auto;
+}
+
 @media screen and (max-width: 820px) {
   .venuesContainer {
     display: block;
