Booking caleneder updated
The booking inputs with the calender is updated, now when the user books a date, that date is not available anymore after refreshing the page. The user can see in the calender which dates are available and not available.

--- a/src/styles.css
+++ b/src/styles.css
@@ -413,7 +413,6 @@ p {
   font-weight: bold;
 }
 
-
 .avatar-input {
   width: 300px;
   padding: 10px;
@@ -438,6 +437,42 @@ p {
 
 .react-calendar {
   margin: 0 auto;
+}
+
+.alert-success {
+  margin: 0 auto;
+  background-color: rgb(3, 176, 3);
+  color: #000000;
+  width: 300px;
+  padding: 20px;
+  margin-top: 10px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.alert-danger {
+  margin: 0 auto;
+  background-color: rgb(255, 0, 0);
+  color: #000000;
+  width: 300px;
+  padding: 20px;
+  margin-top: 10px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.input-width {
+  width: 90%;
+  height: 30px;
+  margin: 0 auto;
+  padding: 8px 12px;
+  font-family: inherit;
+  font-size: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: none;
+  outline: none;
+  transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 820px) {
